package enums;

public enum FreiwilligenStatus {
    VERFÜGBAR,
    ZUGEWIESEN,
    VOR_ORT,
    NICHT_VERFÜGBAR
}
