package enums;

public enum Fähigkeit {
    ERSTE_HILFE,
    TECHNISCHE_HILFE,
    SPRACHKENNTNISSE,
    FAHRKÜNFTE
}
