package enums;

public enum Unterstützungsaktivität {
    SANITÄTSDIENST,
    NAHRUNGSVERSORGUNG,
    TRANSPORT,
    EVAKUIERUNG,
    KOMMUNIKATION
}