package interfaces;

import models.GeoKoordinaten;

import java.util.List;

public interface ILocation {
       double latitude = 0;
     double longitude=0;
}